--- a/docker/mssql/docker-compose.yml
+++ b/docker/mssql/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - /var/opt/mssql
       # we copy our scripts onto the container
-      - ./sql:/usr/src/app
+      - .:/usr/src/app
     # bash will be executed from that path, our scripts folder
     working_dir: /usr/src/app
     # run the entrypoint.sh that will import the data AND sqlserver
