--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -167,7 +167,7 @@ jobs:
 
       - name: "Write environment"
         env:
-          APP_ENV: test-mssql
+          APP_ENV: testmssql
           MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
           MSQL_DB_PORT: ${{ secrets.MSQL_DB_PORT }}
           MSQL_DB_POOL_MAX: ${{ secrets.MSQL_DB_POOL_MAX }}
@@ -186,7 +186,7 @@ jobs:
           npm run test:migration:mssql
         # npm run test:migration
         env:
-          APP_ENV: test-mssql
+          APP_ENV: testmssql
           MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
           MSQL_DB_PORT: ${{ secrets.MSQL_DB_PORT }}
           MSQL_DB_POOL_MAX: ${{ secrets.MSQL_DB_POOL_MAX }}
