--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:migrate": "npm run dbmigratetest reset && npm run dbmigratetest up && npm run db:seed",
     "test:e2e2:open": "npm run test:e2e:open",
     "test:migration": "jest --config ./jest.migrations.config.js --runInBand",
-    "test:migration:mssql": "APP_ENV=test-mssql NODE_ENV=test-mssql jest --config ./jest.migrations.config.js --runInBand",
+    "test:migration:mssql": "APP_ENV=testmssql NODE_ENV=testmssql jest --config ./jest.migrations.config.js --runInBand",
     "build": "next build",
     "dev": "NODE_ENV=development node server.js",
     "prepare-db-and-start": "npm run create-dev-db; npm run dbmigrate up && npm run start",
@@ -31,7 +31,7 @@
     "db:seed": "node db/scripts/seed_database.js",
     "dbmigrate": "db-migrate --migrations-dir 'db/migrations/'",
     "dbmigrate-dev-mssql": "db-migrate --migrations-dir 'db/migrations/' -e development-mssql",
-    "dbmigrate-test-mssql": "db-migrate --migrations-dir 'db/migrations/' -e test-mssql",
+    "dbmigrate-test-mssql": "db-migrate --migrations-dir 'db/migrations/' -e testmssql",
     "dbmigratetest": "db-migrate --migrations-dir 'db/migrations/' -e test",
     "dbmigratedry": "db-migrate --dry-run --migrations-dir 'db/migrations/'",
     "postinstall": "test -n \"$NONPMPOSTINSTALL\" || npm run build"
