fix: subject: update mssql test server script~

--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -211,6 +211,10 @@ jobs:
           MSQL_TEST_DB_NAME: nhs_virtual_visit_test
         run: |
           bin/write_environment.sh
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
 
       # - name: "Write database json"
       #   run: |
