--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -184,23 +184,25 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "12.x"
+      - run: bin/setup_test_mssql_docker.sh
+      - run: npm run test:migration:mssql
 
-      - name: run mssql migration tests
-        run: |
-          bin/setup_test_mssql_docker.sh
-          cat .env
-          npm run test:migration:mssql
-        env:
-          APP_ENV: testmssql
-          MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
-          MSQL_DB_PORT: ${{ secrets.MSQL_DB_PORT }}
-          MSQL_DB_POOL_MAX: ${{ secrets.MSQL_DB_POOL_MAX }}
-          MSQL_DB_POOL_MIN: ${{ secrets.MSQL_DB_POOL_MIN }}
-          MSQL_DB_POOL_IDLE_TIMEOUT: ${{ secrets.MSQL_DB_POOL_IDLE_TIMEOUT }}
-          MSQL_TEST_DB_USER: ${{ secrets.MSQL_TEST_DB_USER }}
-          MSQL_TEST_DB_PASSWORD: ${{ secrets.MSQL_TEST_DB_PASSWORD }}
-          MSQL_TEST_DB_SERVER: ${{ secrets.MSQL_TEST_DB_SERVER }}
-          MSQL_TEST_DB_NAME: ${{ secrets.MSQL_TEST_DB_NAME }}
+      # - name: run mssql migration tests
+      #   run: |
+      #     bin/setup_test_mssql_docker.sh
+      #     cat .env
+      #     npm run test:migration:mssql
+      #   env:
+      #     APP_ENV: testmssql
+      #     MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
+      #     MSQL_DB_PORT: ${{ secrets.MSQL_DB_PORT }}
+      #     MSQL_DB_POOL_MAX: ${{ secrets.MSQL_DB_POOL_MAX }}
+      #     MSQL_DB_POOL_MIN: ${{ secrets.MSQL_DB_POOL_MIN }}
+      #     MSQL_DB_POOL_IDLE_TIMEOUT: ${{ secrets.MSQL_DB_POOL_IDLE_TIMEOUT }}
+      #     MSQL_TEST_DB_USER: ${{ secrets.MSQL_TEST_DB_USER }}
+      #     MSQL_TEST_DB_PASSWORD: ${{ secrets.MSQL_TEST_DB_PASSWORD }}
+      #     MSQL_TEST_DB_SERVER: ${{ secrets.MSQL_TEST_DB_SERVER }}
+      #     MSQL_TEST_DB_NAME: ${{ secrets.MSQL_TEST_DB_NAME }}
 
   # tag-and-release:
   #   runs-on: ubuntu-latest
