--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -92,14 +92,6 @@ jobs:
   #         --health-interval 10s
   #         --health-timeout 5s
   #         --health-retries 5
-  #     # MSSQL configuration - REMOVE POSTGRES when full migration done.
-  #     mssql:
-  #       image: microsoft/mssql-server-linux:latest
-  #       env:
-  #         ACCEPT_EULA: Y
-  #         SA_PASSWORD: ${{ secrets.MSSQL_PASSWORD }}
-  #       ports:
-  #         - 1433:1433
 
   #   if: (github.repository == 'madetech/nhs-virtual-visit')
   #   steps:
@@ -155,6 +147,23 @@ jobs:
   migration-tests:
     runs-on: ubuntu-latest
 
+    services:
+      # Remove after migration to MSSQL
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: nhs-virtual-visit-test
+        ports:
+          - 5432:5432
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     if: (github.repository == 'madetech/nhs-virtual-visit')
     steps:
       - uses: actions/checkout@v2
@@ -165,12 +174,9 @@ jobs:
       - name: npm install ci
         run: npm ci
 
-      - name: build
-        run: npm run build
-
-      - name: "Write environment"
+      - name: Create .env file
         env:
-          APP_ENV: testmssql
+          APP_ENV: test,test-mssql
           MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
           MSQL_DB_PORT: ${{ secrets.MSQL_DB_PORT }}
           MSQL_DB_POOL_MAX: ${{ secrets.MSQL_DB_POOL_MAX }}
@@ -183,29 +189,23 @@ jobs:
         run: |
           bin/write_environment.sh
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: "12.x"
-      - run: bin/setup_test_mssql_docker.sh
-      - run: npm run test:migration:mssql
-
-      # - name: run mssql migration tests
-      #   run: |
-      #     bin/setup_test_mssql_docker.sh
-      #     cat .env
-      #     npm run test:migration:mssql
-      #   env:
-      #     APP_ENV: testmssql
-      #     MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
-      #     MSQL_DB_PORT: ${{ secrets.MSQL_DB_PORT }}
-      #     MSQL_DB_POOL_MAX: ${{ secrets.MSQL_DB_POOL_MAX }}
-      #     MSQL_DB_POOL_MIN: ${{ secrets.MSQL_DB_POOL_MIN }}
-      #     MSQL_DB_POOL_IDLE_TIMEOUT: ${{ secrets.MSQL_DB_POOL_IDLE_TIMEOUT }}
-      #     MSQL_TEST_DB_USER: ${{ secrets.MSQL_TEST_DB_USER }}
-      #     MSQL_TEST_DB_PASSWORD: ${{ secrets.MSQL_TEST_DB_PASSWORD }}
-      #     MSQL_TEST_DB_SERVER: ${{ secrets.MSQL_TEST_DB_SERVER }}
-      #     MSQL_TEST_DB_NAME: ${{ secrets.MSQL_TEST_DB_NAME }}
+      - name: run migration tests
+        run: |
+          bin/setup_test_mssql_docker.sh
+          npm run dbmigratetest up
+          npm run test:migration
+        env:
+          APP_ENV: test,test-mssql
+          TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
+          MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
+          MSQL_DB_PORT: ${{ secrets.MSQL_DB_PORT }}
+          MSQL_DB_POOL_MAX: ${{ secrets.MSQL_DB_POOL_MAX }}
+          MSQL_DB_POOL_MIN: ${{ secrets.MSQL_DB_POOL_MIN }}
+          MSQL_DB_POOL_IDLE_TIMEOUT: ${{ secrets.MSQL_DB_POOL_IDLE_TIMEOUT }}
+          MSQL_TEST_DB_USER: ${{ secrets.MSQL_TEST_DB_USER }}
+          MSQL_TEST_DB_PASSWORD: ${{ secrets.MSQL_TEST_DB_PASSWORD }}
+          MSQL_TEST_DB_SERVER: ${{ secrets.MSQL_TEST_DB_SERVER }}
+          MSQL_TEST_DB_NAME: ${{ secrets.MSQL_TEST_DB_NAME }}
 
   # tag-and-release:
   #   runs-on: ubuntu-latest
