--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -174,6 +174,9 @@ jobs:
       - name: npm install ci
         run: npm ci
 
+      - name: build
+        run: npm run build
+
       - name: Create .env file
         env:
           APP_ENV: test,test-mssql
