--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:e2e:open": "NODE_ENV=development cypress open",
     "test:e2e:audit": "cypress run --headless --env runAudit=true performance=true",
     "test:e2e:audit:open": "cypress open --env runAudit=true performance=true",
-    "test:server": "APP_ENV=test NODE_ENV=development PORT=3001 node server.js",
+    "test:server": "APP_ENV=test,test-mssql NODE_ENV=development PORT=3001 node server.js",
     "test:coverage": "jest --silent --coverage",
     "test:ci": "npm run format:check && npm run test:contract -- --runInBand && npm run test -- --runInBand",
     "test:migrate": "npm run dbmigratetest reset && npm run dbmigratetest up && npm run db:seed",
