--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -263,26 +263,26 @@ jobs:
       - name: run migration tests
         run: npm run test:migration
 
-  # tag-and-release:
-  #   runs-on: ubuntu-latest
-  #   needs: [contract-tests, build-and-unit-tests, migration-tests, e2e-tests]
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Conventional Changelog Action
-  #       uses: TriPSs/conventional-changelog-action@v3
-  #       id: changelog
-  #       with:
-  #         github-token: ${{ secrets.github_token }}
-  #         output-file: "CHANGELOG.md"
-  #     - name: Create Release
-  #       uses: actions/create-release@v1
-  #       if: ${{ steps.changelog.outputs.skipped == 'false' }}
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.github_token }}
-  #       with:
-  #         tag_name: ${{ steps.changelog.outputs.tag }}
-  #         release_name: ${{ steps.changelog.outputs.tag }}
-  #         body: ${{ steps.changelog.outputs.clean_changelog }}
+  tag-and-release:
+    runs-on: ubuntu-latest
+    needs: [contract-tests, build-and-unit-tests, migration-tests, e2e-tests]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Conventional Changelog Action
+        uses: TriPSs/conventional-changelog-action@v3
+        id: changelog
+        with:
+          github-token: ${{ secrets.github_token }}
+          output-file: "CHANGELOG.md"
+      - name: Create Release
+        uses: actions/create-release@v1
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
+        with:
+          tag_name: ${{ steps.changelog.outputs.tag }}
+          release_name: ${{ steps.changelog.outputs.tag }}
+          body: ${{ steps.changelog.outputs.clean_changelog }}
 
   # azure-docker-build-push:
   #   needs: tag-and-release
