--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -29,8 +29,8 @@ jobs:
       - name: "npm install, build, and test"
         run: |
           npm install
+          ll .next
           npm run build --if-present
-          npm run test --if-present
 
       - name: "Run Azure webapp deploy action using publish profile credentials"
         uses: azure/webapps-deploy@v2
@@ -38,7 +38,7 @@ jobs:
           app-name: "virtualvisitscode"
           slot-name: "production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1354ACBB1422489280969781D23BDAC6 }}
-          package: .
+          package: .next
 
   # build-and-unit-tests:
   #   runs-on: ubuntu-latest
